Crash when switching to/from Weight Paint mode #68268

Closed
opened 2019-08-05 18:27:59 +02:00 by Demeter Dzadik · 16 comments
Member

System Information
Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 13:33, hash: 8f1a55831c
Worked: Been using July 25 build for a while, so this crash must've been introduced between then and now.

Short description of error
Crashed 3 times today in the span of a few hours. The 3rd crash, which I have the stack trace for, happened when switching from edit mode to weight paint mode. The one before this was going from weight paint into object mode, and the first crash I don't remember exactly, but weight paint mode was definitely what I was switching into or out of.

Exact steps for others to reproduce the error

  • Open attached blend
  • Set undo steps in system preferences to 2
  • Do some weight painting on GEO-rain_body_weightpaint.001
  • Switch from weight paint to edit mode
  • isolate some selected vertices with shift+H
  • Switch back to weight paint mode
  • It should crash.

Blend:
rain_rig.blend

Trace:
weightpaintcrash

**System Information** Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 13:33, hash: `8f1a55831c` Worked: Been using July 25 build for a while, so this crash must've been introduced between then and now. **Short description of error** Crashed 3 times today in the span of a few hours. The 3rd crash, which I have the stack trace for, happened when switching from edit mode to weight paint mode. The one before this was going from weight paint into object mode, and the first crash I don't remember exactly, but weight paint mode was definitely what I was switching into or out of. **Exact steps for others to reproduce the error** - Open attached blend - Set undo steps in system preferences to 2 - Do some weight painting on `GEO-rain_body_weightpaint.001` - Switch from weight paint to edit mode - isolate some selected vertices with shift+H - Switch back to weight paint mode - It should crash. Blend: [rain_rig.blend](https://archive.blender.org/developer/F7650473/rain_rig.blend) Trace: [weightpaintcrash](https://archive.blender.org/developer/F7650471/weightpaintcrash)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Demeter Dzadik changed title from Crash when to switching to/from Weight Paint mode to Crash when switching to/from Weight Paint mode 2019-08-05 18:29:47 +02:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-08-05 18:52:09 +02:00

We need a bit more concrete step to be able to look into this issue.
Exact steps to make it crash would be awesome to have.

We need a bit more concrete step to be able to look into this issue. Exact steps to make it crash would be awesome to have.
Author
Member

I felt a crash coming, so I saved, and I was right.

File:
rain_rig62.blend

Trace:
weightpaintcrash2

After saving, these are exactly what I did:

  • Switch to object mode
  • select GEO-rain_body_weightpaint.001
  • isolate selection with shift+H
  • enter edit mode
  • deselect all
  • select roughly the same verts that were selected before
  • switch to weight paint mode
  • crash.

But of course, it refuses to be consistently reproducible so it doesn't happen again :P

I'll keep hunting.

I felt a crash coming, so I saved, and I was right. File: [rain_rig62.blend](https://archive.blender.org/developer/F7651524/rain_rig62.blend) Trace: [weightpaintcrash2](https://archive.blender.org/developer/F7651523/weightpaintcrash2) After saving, these are exactly what I did: - Switch to object mode - select `GEO-rain_body_weightpaint.001` - isolate selection with shift+H - enter edit mode - deselect all - select roughly the same verts that were selected before - switch to weight paint mode - crash. But of course, it refuses to be consistently reproducible so it doesn't happen again :P I'll keep hunting.
Author
Member

No blend but this time I isolated some verts in edit mode before entering weight paint mode and crashing. Still can't consistently reproduce.

weightpaintcrash3

No blend but this time I isolated some verts in edit mode before entering weight paint mode and crashing. Still can't consistently reproduce. [weightpaintcrash3](https://archive.blender.org/developer/F7651609/weightpaintcrash3)
Author
Member

Unhid verts in edit mode with Alt+H, switched to weight paint mode, crash.

weightpaintcrash4

Unhid verts in edit mode with Alt+H, switched to weight paint mode, crash. [weightpaintcrash4](https://archive.blender.org/developer/F7652781/weightpaintcrash4)
Author
Member

(Upgraded to latest build today)

Isolated verts in edit mode with Shift+H, switched to weight paint mode, crash.

Starting to see a pattern emerge here, but still can't consistently do it.

weightpaintcrash5

(I might have missed the first few lines of some of the previous stack traces)

(Upgraded to latest build today) Isolated verts in edit mode with Shift+H, switched to weight paint mode, crash. Starting to see a pattern emerge here, but still can't consistently do it. [weightpaintcrash5](https://archive.blender.org/developer/F7652995/weightpaintcrash5) (I might have missed the first few lines of some of the previous stack traces)
Author
Member

Updated post with consistent reproduction steps with help from @ZedDB

Updated post with consistent reproduction steps with help from @ZedDB

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

I'm afraid this particular case is 100% reproducible using the same "ten clicks" trick that we used before:

  1. Undo Steps is set to 2.
  2. Open provided rain_rig62.blend
  3. Click left mouse button ten times on any vertex.
  4. Switch to Weight Paint and Blender will crash.

I can reproduce this 100% on provided file on dcad1eb03c from 2019-08-06

I'm afraid this particular case is 100% reproducible using the same "ten clicks" trick that we used before: 1. Undo Steps is set to 2. 2. Open provided rain_rig62.blend 3. Click left mouse button ten times on any vertex. 4. Switch to Weight Paint and Blender will crash. I can reproduce this 100% on provided file on dcad1eb03ccc from 2019-08-06
Sebastian Parborg removed their assignment 2019-08-07 19:13:56 +02:00
Campbell Barton was assigned by Sebastian Parborg 2019-08-07 19:13:56 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I can reproduce this too.

@ideasman42 it seems to be related to undo. Let me know if you need help reproducing this.

I can reproduce this too. @ideasman42 it seems to be related to undo. Let me know if you need help reproducing this.

Thanks, I can redo this. looking into it.

Thanks, I can redo this. looking into it.

This issue was referenced by ba0870713b

This issue was referenced by ba0870713b9b563cb8fcecc9049197bf2dc3d835

Just in case, I was able to reproduce this with default Cube as well!

  1. Undo Steps is set to 2.
  2. Start Blender, add "Basis" and "Key 1" Shape Keys to default Cube.
  3. Select "Key 1" and set it to 1.0.
  4. Switch to Edit Mode. Click on any vertex 10 times.
  5. Switch to Weight Paint.
  6. Switch to Edit Mode.
  7. Switch to Weight Paint, Vertex Paint or Sculpt Mode and Blender will crash.

You can even try on my simple file with a Cube – open it, switch to Weight Paint, to Edit Mode, to Weight Paint again and Blender will crash. The same trick works with Vertex Paint as well - switch to VP back and forth the same way. Sculpt Mode does this if you switch to Weight - to Edit - to Sculpt.
CrashingModesRound2.blend

Just in case, I was able to reproduce this with default Cube as well! 1. Undo Steps is set to 2. 2. Start Blender, add "Basis" and "Key 1" Shape Keys to default Cube. 3. Select "Key 1" and set it to 1.0. 4. Switch to Edit Mode. Click on any vertex 10 times. 5. Switch to Weight Paint. 6. Switch to Edit Mode. 7. Switch to Weight Paint, Vertex Paint or Sculpt Mode and Blender will crash. You can even try on my simple file with a Cube – open it, switch to Weight Paint, to Edit Mode, to Weight Paint again and Blender will crash. The same trick works with Vertex Paint as well - switch to VP back and forth the same way. Sculpt Mode does this if you switch to Weight - to Edit - to Sculpt. [CrashingModesRound2.blend](https://archive.blender.org/developer/F7653435/CrashingModesRound2.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68268
No description provided.