Fix T68268: Crash switching to Weight Paint mode

Also applied to sculpt mode